# CouresProjects

Artificial_Intelligence&Machine_Learning/: 3.md  FindS.py  second.md
Artificial_Intelligence&Machine_Learning/RLRobot_Mase/: DQL.ipynb  DQL.py  Maze.py  RLRobot.py  RLRobot_Maze.ipynb  ReplayDataSet.py  main.ipynb  main2.ipynb
Artificial_Intelligence&Machine_Learning/RLRobot_Mase/torch_py/: MinDQNRobot.py  QNetwork.py  QNetworknew.py
Cross_Innovation_Practice/AlgorithmDesign/: PCPSolver.py  task1.md
Robotics1_Pra/: childs.txt  scara.ttt
Robotics1_Pra/3D建模/: Scara.SLDASM  基座.SLDPRT  大臂.SLDPRT  夹爪.SLDPRT  小臂.SLDPRT  直线运动关节.SLDPRT
Robotics1_Pra/exercise1/devel/: .catkin
Robotics1_Pra/exercise1/devel/lib/lab1/: lab1_node
Robotics1_Pra/exercise1/devel/lib/pkgconfig/: lab1.pc
Robotics1_Pra/exercise1/src/lab1/: CMakeLists.txt
Robotics1_Pra/exercise1/src/lab1/launch/: lab1.launch
Robotics1_Pra/kinematics/: kinematics.m  kinematics.py  matrixtest.py
Robotics1_Pra/stlfiles/: base.STL  bigarm.STL  claw.STL  linemove.STL  smallarm.STL
Robotics1_Pra/实验三/: 实验3-附件.rar  实验3说明(2).pptx  实验报告3.docx  文档.md  正逆运动学求解过程.md
Robotics1_Pra/实验三/实验3-附件/: Readme.txt
Robotics1_Pra/实验三/实验3-附件/相关资料/: Coppeliasim相关资料链接.docx
Robotics1_Pra/实验三/实验3-附件/自带逆运动学求解器/: IK_example.py
Ros_Training/LEC1_src/devel/: .catkin  .rosinstall  local_setup.sh
Ros_Training/LEC1_src/devel/lib/beginner_tutorials/: listener  talker
Ros_Training/LEC1_src/devel/lib/pkgconfig/: beginner_tutorials.pc
Ros_Training/LEC1_src/src/beginner_tutorial/: CMakeLists.txt  package.xml
Ros_Training/LEC1_src/src/beginner_tutorial/launch/: talker_listener.launch
Ros_Training/LEC1_src/src/beginner_tutorial/src/: talker.cpp
Ros_Training/LEC2_ws/src/init/: CMakeLists.txt  package.xml
Ros_Training/LEC2_ws/src/init/src/: hello_world.cpp
Ros_Training/LEC2_ws/src/para/: CMakeLists.txt  package.xml
Ros_Training/LEC2_ws/src/para/src/: parameter_config.cpp
Ros_Training/LEC2_ws/src/pub/: CMakeLists.txt  package.xml
Ros_Training/LEC2_ws/src/pub/src/: Publisher.cpp
Ros_Training/LEC2_ws/src/sub/: CMakeLists.txt  package.xml
Ros_Training/LEC2_ws/src/sub/src/: Subscriber.cpp
Ros_Training/exercise1/devel/: .rosinstall  _setup_util.py
Ros_Training/exercise1/src/lab1/launch/: default.rviz
Ros_Training/exercise1/src/lab1/src/: lab1_node.cpp
Ros_Training/exercise2/devel/: .catkin  .rosinstall  local_setup.sh
Ros_Training/exercise2_stu/: make.sh  run.sh
Ros_Training/exercise2_stu/devel/: .catkin  .rosinstall  local_setup.sh
Ros_Training/exercise2_stu/src/uav_simulator/key_sim/: CMakeLists.txt  package.xml
Ros_Training/exercise2_stu/src/uav_simulator/key_sim/launch/: key_sim.launch
Ros_Training/exercise2_stu/src/uav_simulator/key_sim/srv/: lec4.srv
(+168 files in other folders)
