<package>
    <name>key_sim</name>
    <version>1.0.0</version>
    <description>
        The key_sim package is just for ROS courses
    </description>
    <author>ZJU CSC</author>
    <maintainer email="csc@zju.edu.cn">zju_csc</maintainer>
    <license>GPL 3.0 </license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

    <export>
    </export>

</package>
